lab4/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag
   14                | STRUCT OptTag LC DefList error RC

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB INT error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec
   26        | ParamDec error COMMA VarList

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | Exp error
   38     | IF LP Exp error RP Stmt ELSE Stmt

   39 DefList: Def DefList
   40        | %empty

   41 Def: Specifier DecList SEMI
   42    | Specifier error SEMI

   43 DecList: Dec
   44        | Dec COMMA DecList

   45 Dec: VarDec
   46    | VarDec ASSIGNOP Exp

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp RELOP Exp
   51    | Exp PLUS Exp
   52    | Exp MINUS Exp
   53    | Exp STAR Exp
   54    | Exp DIV Exp
   55    | LP Exp RP
   56    | MINUS Exp
   57    | NOT Exp
   58    | ID LP Args RP
   59    | ID LP RP
   60    | Exp LB Exp RB
   61    | Exp DOT ID
   62    | ID
   63    | INT
   64    | FLOAT
   65    | ID LP error
   66    | Exp LB error

   67 Args: Exp COMMA Args
   68     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 14 20 23 26 37 38 42 65 66
INT (258) 19 20 63
FLOAT (259) 64
ID (260) 15 17 18 21 22 58 59 61 62 65
SEMI (261) 4 5 7 31 33 41 42
COMMA (262) 9 24 26 44 67
ASSIGNOP (263) 46 47
RELOP (264) 50
PLUS (265) 51
MINUS (266) 52 56
STAR (267) 53
DIV (268) 54
AND (269) 48
OR (270) 49
DOT (271) 61
NOT (272) 57
TYPE (273) 10
LP (274) 21 22 34 35 36 38 55 58 59 65
RP (275) 21 22 23 34 35 36 38 55 58 59
LB (276) 19 20 60 66
RB (277) 19 20 60
LC (278) 12 14 28
RC (279) 12 14 28
STRUCT (280) 12 13 14
RETURN (281) 33
IF (282) 34 35 38
ELSE (283) 35 38
WHILE (284) 36
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7, on right: 2
ExtDecList (35)
    on left: 8 9, on right: 4 9
Specifier (36)
    on left: 10 11, on right: 4 5 6 7 27 41 42
StructSpecifier (37)
    on left: 12 13 14, on right: 11
OptTag (38)
    on left: 15 16, on right: 12 14
Tag (39)
    on left: 17, on right: 13
VarDec (40)
    on left: 18 19 20, on right: 8 9 19 20 27 45 46
FunDec (41)
    on left: 21 22 23, on right: 6
VarList (42)
    on left: 24 25 26, on right: 21 24 26
ParamDec (43)
    on left: 27, on right: 24 25 26
CompSt (44)
    on left: 28, on right: 6 32
StmtList (45)
    on left: 29 30, on right: 28 29
Stmt (46)
    on left: 31 32 33 34 35 36 37 38, on right: 29 34 35 36 38
DefList (47)
    on left: 39 40, on right: 12 14 28 39
Def (48)
    on left: 41 42, on right: 39
DecList (49)
    on left: 43 44, on right: 41 44
Dec (50)
    on left: 45 46, on right: 43 44
Exp (51)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66, on right: 31 33 34 35 36 37 38 46 47 48 49 50 51 52 53 54
    55 56 57 60 61 66 67 68
Args (52)
    on left: 67 68, on right: 58 67


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag
   14                | STRUCT . OptTag LC DefList error RC

    ID  shift, and go to state 8

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error SEMI

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC
   14                | STRUCT OptTag . LC DefList error RC

    LC  shift, and go to state 19


State 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    7 ExtDef: Specifier error . SEMI
   23 FunDec: error . RP

    SEMI  shift, and go to state 20
    RP    shift, and go to state 21


State 14

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP

    LP  shift, and go to state 22

    $default  reduce using rule 18 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 23


State 17

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB INT error RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 8 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 26

    CompSt  go to state 27


State 19

   12 StructSpecifier: STRUCT OptTag LC . DefList RC
   14                | STRUCT OptTag LC . DefList error RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


State 20

    7 ExtDef: Specifier error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 21

   23 FunDec: error RP .

    $default  reduce using rule 23 (FunDec)


State 22

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 31
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 33
    ParamDec         go to state 34


State 23

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 24

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 17


State 25

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . INT error RB

    INT  shift, and go to state 37


State 26

   28 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 38
    Def              go to state 30


State 27

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 28

   41 Def: Specifier . DecList SEMI
   42    | Specifier . error SEMI

    error  shift, and go to state 39
    ID     shift, and go to state 35

    VarDec   go to state 40
    DecList  go to state 41
    Dec      go to state 42


State 29

   12 StructSpecifier: STRUCT OptTag LC DefList . RC
   14                | STRUCT OptTag LC DefList . error RC

    error  shift, and go to state 43
    RC     shift, and go to state 44


State 30

   39 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 45
    Def              go to state 30


State 31

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 32

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 35

    VarDec  go to state 46


State 33

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 47


State 34

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .
   26        | ParamDec . error COMMA VarList

    error  shift, and go to state 48
    COMMA  shift, and go to state 49

    RP  reduce using rule 25 (VarList)


State 35

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 36

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 37

   19 VarDec: VarDec LB INT . RB
   20       | VarDec LB INT . error RB

    error  shift, and go to state 50
    RB     shift, and go to state 51


State 38

   28 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 26
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    $default  reduce using rule 30 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 62
    Stmt      go to state 63
    Exp       go to state 64


State 39

   42 Def: Specifier error . SEMI

    SEMI  shift, and go to state 65


State 40

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB INT error RB
   45 Dec: VarDec .
   46    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 66
    LB        shift, and go to state 25

    $default  reduce using rule 45 (Dec)


State 41

   41 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 67


State 42

   43 DecList: Dec .
   44        | Dec . COMMA DecList

    COMMA  shift, and go to state 68

    $default  reduce using rule 43 (DecList)


State 43

   14 StructSpecifier: STRUCT OptTag LC DefList error . RC

    RC  shift, and go to state 69


State 44

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 45

   39 DefList: Def DefList .

    $default  reduce using rule 39 (DefList)


State 46

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB INT error RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 27 (ParamDec)


State 47

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 48

   26 VarList: ParamDec error . COMMA VarList

    COMMA  shift, and go to state 70


State 49

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 71
    ParamDec         go to state 34


State 50

   20 VarDec: VarDec LB INT error . RB

    RB  shift, and go to state 72


State 51

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 52

   63 Exp: INT .

    $default  reduce using rule 63 (Exp)


State 53

   64 Exp: FLOAT .

    $default  reduce using rule 64 (Exp)


State 54

   58 Exp: ID . LP Args RP
   59    | ID . LP RP
   62    | ID .
   65    | ID . LP error

    LP  shift, and go to state 73

    $default  reduce using rule 62 (Exp)


State 55

   56 Exp: MINUS . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 74


State 56

   57 Exp: NOT . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 75


State 57

   55 Exp: LP . Exp RP

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 76


State 58

   33 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 77


State 59

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt
   38     | IF . LP Exp error RP Stmt ELSE Stmt

    LP  shift, and go to state 78


State 60

   36 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 79


State 61

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


State 62

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 80


State 63

   29 StmtList: Stmt . StmtList

    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 26
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    $default  reduce using rule 30 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 81
    Stmt      go to state 63
    Exp       go to state 64


State 64

   31 Stmt: Exp . SEMI
   37     | Exp . error
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error

    error     shift, and go to state 82
    SEMI      shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93


State 65

   42 Def: Specifier error SEMI .

    $default  reduce using rule 42 (Def)


State 66

   46 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 94


State 67

   41 Def: Specifier DecList SEMI .

    $default  reduce using rule 41 (Def)


State 68

   44 DecList: Dec COMMA . DecList

    ID  shift, and go to state 35

    VarDec   go to state 40
    DecList  go to state 95
    Dec      go to state 42


State 69

   14 StructSpecifier: STRUCT OptTag LC DefList error RC .

    $default  reduce using rule 14 (StructSpecifier)


State 70

   26 VarList: ParamDec error COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 96
    ParamDec         go to state 34


State 71

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 72

   20 VarDec: VarDec LB INT error RB .

    $default  reduce using rule 20 (VarDec)


State 73

   58 Exp: ID LP . Args RP
   59    | ID LP . RP
   65    | ID LP . error

    error  shift, and go to state 97
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57
    RP     shift, and go to state 98

    Exp   go to state 99
    Args  go to state 100


State 74

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   56    | MINUS Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error

    STAR  shift, and go to state 88
    DIV   shift, and go to state 89
    DOT   shift, and go to state 92
    LB    shift, and go to state 93

    $default  reduce using rule 56 (Exp)


State 75

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   57    | NOT Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error

    DOT  shift, and go to state 92
    LB   shift, and go to state 93

    $default  reduce using rule 57 (Exp)


State 76

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   55    | LP Exp . RP
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    RP        shift, and go to state 101
    LB        shift, and go to state 93


State 77

   33 Stmt: RETURN Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error

    SEMI      shift, and go to state 102
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93


State 78

   34 Stmt: IF LP . Exp RP Stmt
   35     | IF LP . Exp RP Stmt ELSE Stmt
   38     | IF LP . Exp error RP Stmt ELSE Stmt

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 103


State 79

   36 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 104


State 80

   28 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 28 (CompSt)


State 81

   29 StmtList: Stmt StmtList .

    $default  reduce using rule 29 (StmtList)


State 82

   37 Stmt: Exp error .

    $default  reduce using rule 37 (Stmt)


State 83

   31 Stmt: Exp SEMI .

    $default  reduce using rule 31 (Stmt)


State 84

   47 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 105


State 85

   50 Exp: Exp RELOP . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 106


State 86

   51 Exp: Exp PLUS . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 107


State 87

   52 Exp: Exp MINUS . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 108


State 88

   53 Exp: Exp STAR . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 109


State 89

   54 Exp: Exp DIV . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 110


State 90

   48 Exp: Exp AND . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 111


State 91

   49 Exp: Exp OR . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 112


State 92

   61 Exp: Exp DOT . ID

    ID  shift, and go to state 113


State 93

   60 Exp: Exp LB . Exp RB
   66    | Exp LB . error

    error  shift, and go to state 114
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 115


State 94

   46 Dec: VarDec ASSIGNOP Exp .
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93

    $default  reduce using rule 46 (Dec)


State 95

   44 DecList: Dec COMMA DecList .

    $default  reduce using rule 44 (DecList)


State 96

   26 VarList: ParamDec error COMMA VarList .

    $default  reduce using rule 26 (VarList)


State 97

   65 Exp: ID LP error .

    $default  reduce using rule 65 (Exp)


State 98

   59 Exp: ID LP RP .

    $default  reduce using rule 59 (Exp)


State 99

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error
   67 Args: Exp . COMMA Args
   68     | Exp .

    COMMA     shift, and go to state 116
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93

    $default  reduce using rule 68 (Args)


State 100

   58 Exp: ID LP Args . RP

    RP  shift, and go to state 117


State 101

   55 Exp: LP Exp RP .

    $default  reduce using rule 55 (Exp)


State 102

   33 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 33 (Stmt)


State 103

   34 Stmt: IF LP Exp . RP Stmt
   35     | IF LP Exp . RP Stmt ELSE Stmt
   38     | IF LP Exp . error RP Stmt ELSE Stmt
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error

    error     shift, and go to state 118
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    RP        shift, and go to state 119
    LB        shift, and go to state 93


State 104

   36 Stmt: WHILE LP Exp . RP Stmt
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    RP        shift, and go to state 120
    LB        shift, and go to state 93


State 105

   47 Exp: Exp . ASSIGNOP Exp
   47    | Exp ASSIGNOP Exp .
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93

    $default  reduce using rule 47 (Exp)


State 106

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   50    | Exp RELOP Exp .
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error

    PLUS   shift, and go to state 86
    MINUS  shift, and go to state 87
    STAR   shift, and go to state 88
    DIV    shift, and go to state 89
    DOT    shift, and go to state 92
    LB     shift, and go to state 93

    $default  reduce using rule 50 (Exp)


State 107

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   51    | Exp PLUS Exp .
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error

    STAR  shift, and go to state 88
    DIV   shift, and go to state 89
    DOT   shift, and go to state 92
    LB    shift, and go to state 93

    $default  reduce using rule 51 (Exp)


State 108

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   52    | Exp MINUS Exp .
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error

    STAR  shift, and go to state 88
    DIV   shift, and go to state 89
    DOT   shift, and go to state 92
    LB    shift, and go to state 93

    $default  reduce using rule 52 (Exp)


State 109

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   53    | Exp STAR Exp .
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error

    DOT  shift, and go to state 92
    LB   shift, and go to state 93

    $default  reduce using rule 53 (Exp)


State 110

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   54    | Exp DIV Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error

    DOT  shift, and go to state 92
    LB   shift, and go to state 93

    $default  reduce using rule 54 (Exp)


State 111

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   48    | Exp AND Exp .
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error
